--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -28,7 +28,6 @@
     <md-tab-group [(selectedIndex)]="selectedIndex">
       <md-tab>
         <div class="customer-view__content">
-          <div class="customer-view__content__left">
             <div class="row">
               <md-card class="customer-view__content__card row__small">
                 <md-card-title>SHIPPING ADDRESS</md-card-title>
@@ -43,32 +42,40 @@
                 </md-card-content>
               </md-card>
 
-              <md-card *ngFor="let cc of entity.creditCards" class="customer-view__content__card row__medium">
-                <md-card-title>
-                  <md-icon>credit_card</md-icon>
-                  <span>{{cc.ccnumber.substring(cc.ccnumber.length-4, cc.ccnumber.length)}}</span>
+              <md-card class="customer-view__content__card credit-cards row__medium">
+                <md-card-title class="credit-cards__title">
+                  <span>CREDIT CARDS</span>
                   <md-icon class="customer-view__content__card__action">more_vert</md-icon>
                 </md-card-title>
                 <md-card-content>
-                  <div class="customer-view__content__card__column">
-                    <div class="customer-view__content__card__item"><span>Name: </span>{{cc.name}}</div>
-                    <div class="customer-view__content__card__item"><span>Address 1: </span>{{cc.address.line2}}</div>
-                    <div class="customer-view__content__card__item"><span>Address 2: </span>{{cc.address.line2}}</div>
-                    <div class="customer-view__content__card__item"><span>Postal Code: </span>{{cc.address.zip}}</div>
-                    <div class="customer-view__content__card__item"><span>City: </span>{{cc.address.city}}</div>
-                    <div class="customer-view__content__card__item"><span>State: </span>{{cc.address.state}}</div>
-                    <div class="customer-view__content__card__item"><span>Country: </span>{{cc.address.country}}</div>
-                  </div>
-                  <div class="customer-view__content__card__column customer-view__content__card__column--last">
-                    <div class="customer-view__content__card__item"><span>Last 4: </span>{{cc.ccnumber.substring(cc.ccnumber.length-4, cc.ccnumber.length)}}</div>
-                    <div class="customer-view__content__card__item"><span>Expiration: </span>{{cc.expiration}}</div>
+                  <div *ngFor="let cc of entity.creditCards" class="credit-cards__item">
+                    <span> <md-icon>credit_card</md-icon> <span>{{cc.ccnumber.substring(cc.ccnumber.length-4, cc.ccnumber.length)}}</span></span>
+                    <span>Exp: {{cc.expiration}}</span>
+                    <md-icon>remove_red_eye</md-icon>
                   </div>
                 </md-card-content>
               </md-card>
+
+              <md-card class="customer-view__content__card events row__large">
+                <md-card-title>
+                  CUSTOMER EVENTS
+                  <md-icon class="customer-view__content__card__action">more_vert</md-icon>
+                </md-card-title>
+                <md-card-content>
+                  <div class="events__title">
+                    <span class="events__title__label">{{entity.createdAt.format('MM/DD/YYYY')}}</span>
+                  </div>
+                  <div class="events__content">
+                    <div><img src="assets/images/alert-icon.svg"></div>
+                    <span>{{entity.firstName}} {{entity.lastName}} user created</span>
+                  </div>
+                </md-card-content>
+              </md-card>
+
             </div>
 
             <div class="row">
-              <md-card class="customer-view__content__card customer-view__content__card--notes row__large">
+              <md-card class="customer-view__content__card notes row__large">
                 <md-card-title>NOTES</md-card-title>
                 <md-card-content>
                   <div *ngIf="showNewNote" class="notes">
@@ -104,7 +111,7 @@
                 </md-card-content>
               </md-card>
 
-              <md-card class="customer-view__content__card row__medium">
+              <md-card class="customer-view__content__card row__large">
                 <md-card-title>
                   <md-icon>trending_up</md-icon>
                   RECENT TRANSACTIONS
@@ -115,26 +122,6 @@
               </md-card>
             </div>
           </div>
-          <div class="customer-view__content__right">
-            <md-card class="customer-view__content__card customer-view__content__card--events">
-              <md-card-title>
-                CUSTOMER EVENTS
-                <md-icon class="customer-view__content__card__action">more_vert</md-icon>
-              </md-card-title>
-              <md-card-content>
-                <div class="events">
-                  <div class="events__title">
-                    <span class="events__title__label">{{entity.createdAt.format('MM/DD/YYYY')}}</span>
-                  </div>
-                  <div class="events__content">
-                    <div><img src="assets/images/alert-icon.svg"></div>
-                    <span>{{entity.firstName}} {{entity.lastName}} user created</span>
-                  </div>
-                </div>
-              </md-card-content>
-            </md-card>
-          </div>
-        </div>
       </md-tab>
 
       <md-tab>
