--- a/src/app/navigation/sidenav/sidenav-item/sidenav-item.component.html
+++ b/src/app/navigation/sidenav/sidenav-item/sidenav-item.component.html
@@ -1,18 +1,18 @@
 <a md-list-item *ngIf="!hasLink && !hasChildren && !hasQuery"(click)="clicked($event)">
   <md-icon [class.icon--solo]="!full" *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
-  <span *ngIf="full">{{ menuItem.title }}</span>
+  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title }}</span>
 </a>
 <a md-list-item *ngIf="hasLink && !hasChildren && !hasQuery" routerLinkActive="active" (toggle)="true" (click)="clicked($event)">
   <md-icon [class.icon--solo]="!full" *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
-  <span *ngIf="full">{{ menuItem.title }}</span>
+  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title }}</span>
 </a>
 <a md-list-item *ngIf="hasLink && !hasChildren && hasQuery" routerLinkActive="active" (toggle)="true">
   <md-icon [class.icon--solo]="!full" *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
-  <span *ngIf="full">{{ menuItem.title }}</span>
+  <span class="sidenav-item__text" *ngIf="full">{{ menuItem.title }}</span>
 </a>
 <a md-list-item class="nav-dropdown" *ngIf="hasChildren" (click)="toggleDropdown(!active)" [ngClass]="{ 'active' : active && full }" (click)="clicked($event)">
   <md-icon [class.icon--solo]="!full" *ngIf='menuItem.icon'>{{menuItem.icon}}</md-icon>
-  <span *ngIf="full">{{ menuItem?.title }}</span>
+  <span class="sidenav-item__text" *ngIf="full">{{ menuItem?.title }}</span>
   <span class="app-flex-filler"></span>
   <i *ngIf="full" class="material-icons"></i>
 </a>
