--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@
 @import "assets/scss/_advanced-search.scss";
 @import "assets/scss/_datepicker-custom.scss";
 @import "assets/scss/_notifications-list.scss";
+@import "assets/scss/_customer-view.scss";
 
 /***************
   HTML Styles
