Add total number of search results

--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -70,7 +70,7 @@
 
     <div class="search__content">
       <div class="search__content__title">
-        <span>Search Results</span>
+        <span>Search Results <span *ngIf="numberOfSearchResults && numberOfSearchResults > 0">({{numberOfSearchResults}})</span></span>
         <table-pagination
           class="search__content__pagination"
           [limit]="limit"
