--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -174,7 +174,17 @@ $border-color: rgba(0, 0, 0, 0.2);
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       color: $main-color;
       background: #E3E3E3;
-      font-size: 22px;
+      font-size: 18px;
+
+      span {
+        vertical-align: middle;
+      }
+
+      &__view--toggle {
+        margin-left: 15px;
+        vertical-align: middle;
+        cursor: pointer;
+      }
     }
 
     table-pagination > div {
@@ -182,7 +192,7 @@ $border-color: rgba(0, 0, 0, 0.2);
       float: right;
       margin-top: 0;
       margin-right: 0;
-      font-size: 14px;
+      font-size: 12px;
       color: $main-color;
     }
 
@@ -294,6 +304,39 @@ $border-color: rgba(0, 0, 0, 0.2);
               vertical-align: middle;
             }
           }
+        }
+      }
+
+      &--table {
+        display: flex;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        padding: 15px 30px;
+        font-size: 14px;
+        cursor: default;
+
+        img {
+          width: 40px;
+          height: 40px;
+        }
+
+        &:hover {
+          background: rgba(0, 0, 0, 0.06);
+        }
+
+        &__items {
+          display: flex;
+          margin-left: 20px;
+          width: 100%;
+
+          md-icon {
+            margin-top: 8px;
+            cursor: pointer;
+          }
+        }
+
+        &__item {
+          width: 30%;
+          padding: 10px;
         }
       }
     }
