Add current page to pagination component

--- a/src/app/pages/components/table-pagination/table-pagination.component.html
+++ b/src/app/pages/components/table-pagination/table-pagination.component.html
@@ -10,6 +10,8 @@
     </button>
   </md-menu>
 
+  <span *ngIf="paginationString">{{paginationString}}</span>
+
   <button class="entity-index__pagination__buttons__button--left" [disabled]="previousDisabled" md-icon-button (click)="previous.emit(true)">
     <md-icon>keyboard_arrow_left</md-icon>
   </button>
