--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -73,8 +73,8 @@
         <span>Search Results
           <span *ngIf="numberOfSearchResults && numberOfSearchResults > 0">({{numberOfSearchResults}})</span>
         </span>
-        <md-icon *ngIf="numberOfSearchResults && numberOfSearchResults > 0" class="search__content__title__view--toggle" (click)="toggleView()">{{listMode
-          ? 'view_module' : 'view_headline'}}</md-icon>
+        <md-icon *ngIf="numberOfSearchResults && numberOfSearchResults > 0" class="search__content__title__view--toggle" (click)="toggleView()">
+          {{listMode ? 'view_headline' : 'view_module'}}</md-icon>
         <table-pagination
           class="search__content__pagination"
           [limit]="limit"
@@ -99,6 +99,7 @@
         *ngIf="searchResultsToDisplay.length >= 5"
         class="search__content__pagination--bottom"
         [limit]="limit"
+        [paginationString]="paginationString()"
         [paginationValues]="paginationValues"
         [previousDisabled]="page <= 0"
         [nextDisabled]="!hasMorePages()"
