Hide notifications when click outisde of notifications bar

--- a/src/app/navigation/topnav/topnav.component.html
+++ b/src/app/navigation/topnav/topnav.component.html
@@ -68,7 +68,7 @@
     <span class="topnav__separator"></span>
 
     <div class="topnav__notifications" (click)="showNotifications()">
-      <md-icon>chat</md-icon>
+      <md-icon class="topnav__notifications__icon">chat</md-icon>
       <div *ngIf="notificationsCount && notificationsCount > 0" class="topnav__notifications__count"> {{notificationsCount}} </div>
     </div>
   </div>
