--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -77,18 +77,32 @@
           <span *ngIf="numberOfSearchResults && numberOfSearchResults > 0">({{numberOfSearchResults}})</span>
         </span>
         <md-icon *ngIf="numberOfSearchResults && numberOfSearchResults > 0" class="search__content__title__view--toggle" (click)="toggleView()">
-          {{listMode ? 'view_headline' : 'view_module'}}</md-icon>
-        <table-pagination
-          class="search__content__pagination"
-          [limit]="limit"
-          [paginationString]="paginationString()"
-          [paginationValues]="paginationValues"
-          [previousDisabled]="page <= 0"
-          [nextDisabled]="!hasMorePages()"
-          (previous)="previousPage()"
-          (next)="nextPage()"
-          (updateLimit)="updateLimit($event)">
-        </table-pagination>
+          {{listMode ? 'view_headline' : 'view_module'}}
+        </md-icon>
+        <div class="search__content__title__options">
+          <span>Sort by:</span>
+          <span>{{sortBy}}</span>
+          <button md-icon-button [md-menu-trigger-for]="sortByMenu">
+            <md-icon>arrow_drop_down</md-icon>
+          </button>
+
+          <md-menu #sortByMenu="mdMenu">
+            <button md-menu-item (click)="setSortBy('created_at asc')">created at asc</button>
+            <button md-menu-item (click)="setSortBy('created_at desc')">created at desc</button>
+          </md-menu>
+
+          <table-pagination
+            class="search__content__pagination"
+            [limit]="limit"
+            [paginationString]="paginationString()"
+            [paginationValues]="paginationValues"
+            [previousDisabled]="page <= 0"
+            [nextDisabled]="!hasMorePages()"
+            (previous)="previousPage()"
+            (next)="nextPage()"
+            (updateLimit)="updateLimit($event)">
+          </table-pagination>
+        </div>
       </div>
 
       <ng-container *ngIf="listMode" >
