Add transactions table to customer view

--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="entity-view__content__body__column__item">
           <span class="entity-view__content__body__column__item__label">Date:</span>
-          <span>{{entity.createdAt.substring(0, 10)}}</span>
+          <span>{{entity.createdAt.format('MM/DD/YYYY')}}</span>
         </div>
         <div class="entity-view__content__body__column__item">
           <span class="entity-view__content__body__column__item__label">Amount:</span>
