--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -1,7 +1,7 @@
 <div class="entity-view">
   <div class="entity-view__title">Transaction</div>
 
-  <div *ngIf="service.hasWritePermission()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
+  <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
   <div *ngIf="entity" class="entity-view__content">
 
