Entity type filter will stay visible if already checked

--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -26,37 +26,37 @@
 
         <div *ngIf="hasAnyEntityType()" class="search__sidenav__subtitle">Category</div>
 
-        <md-checkbox *ngIf="entityTypesCount['campaign']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['campaign']" (change)="checkboxClicked()">
+        <md-checkbox *ngIf="entityTypesCount['campaign'] || entityTypesChecked['campaign']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['campaign']" (change)="checkboxClicked()">
           Campaign
-          <span>({{entityTypesCount['campaign']}})</span>
+          <span>({{entityTypesCount['campaign'] || '0'}})</span>
         </md-checkbox>
-        <md-checkbox *ngIf="entityTypesCount['customer']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['customer']" (change)="checkboxClicked()">
+        <md-checkbox *ngIf="entityTypesCount['customer'] || entityTypesChecked['customer']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['customer']" (change)="checkboxClicked()">
           Customer
-          <span>({{entityTypesCount['customer']}})</span>
+          <span>({{entityTypesCount['customer'] || '0'}})</span>
         </md-checkbox>
-        <md-checkbox *ngIf="entityTypesCount['user']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['user']" (change)="checkboxClicked()">
+        <md-checkbox *ngIf="entityTypesCount['user'] || entityTypesChecked['user']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['user']" (change)="checkboxClicked()">
           User
-          <span>({{entityTypesCount['user']}})</span>
+          <span>({{entityTypesCount['user'] || '0'}})</span>
         </md-checkbox>
-        <md-checkbox *ngIf="entityTypesCount['billing']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['billing']" (change)="checkboxClicked()">
+        <md-checkbox *ngIf="entityTypesCount['billing'] || entityTypesChecked['billing']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['billing']" (change)="checkboxClicked()">
           Billing
-          <span>({{entityTypesCount['billing']}})</span>
+          <span>({{entityTypesCount['billing'] || '0'}})</span>
         </md-checkbox>
-        <md-checkbox *ngIf="entityTypesCount['transaction']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['transaction']" (change)="checkboxClicked()">
+        <md-checkbox *ngIf="entityTypesCount['transaction'] || entityTypesChecked['transaction']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['transaction']" (change)="checkboxClicked()">
           Transaction
-          <span>({{entityTypesCount['transaction']}})</span>
+          <span>({{entityTypesCount['transaction'] || '0'}})</span>
         </md-checkbox>
-        <md-checkbox *ngIf="entityTypesCount['product']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['product']" (change)="checkboxClicked()">
+        <md-checkbox *ngIf="entityTypesCount['product'] || entityTypesChecked['product']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['product']" (change)="checkboxClicked()">
           Product
-          <span>({{entityTypesCount['product']}})</span>
+          <span>({{entityTypesCount['product'] || '0'}})</span>
         </md-checkbox>
-        <md-checkbox *ngIf="entityTypesCount['fulfillment']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['fulfillment']" (change)="checkboxClicked()">
+        <md-checkbox *ngIf="entityTypesCount['fulfillment'] || entityTypesChecked['fulfillment']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['fulfillment']" (change)="checkboxClicked()">
           Fulfillment
-          <span>({{entityTypesCount['fulfillment']}})</span>
+          <span>({{entityTypesCount['fulfillment'] || '0'}})</span>
         </md-checkbox>
-        <md-checkbox *ngIf="entityTypesCount['productschedule']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['productschedule']" (change)="checkboxClicked()">
+        <md-checkbox *ngIf="entityTypesCount['productschedule'] || entityTypesChecked['productschedule']" class="search__sidenav__item" [(ngModel)]="entityTypesChecked['productschedule']" (change)="checkboxClicked()">
           Product Schedule
-          <span>({{entityTypesCount['productschedule']}})</span>
+          <span>({{entityTypesCount['productschedule'] || '0'}})</span>
         </md-checkbox>
 
         <div class="search__sidenav__subtitle"> Refine by Date </div>
