--- a/src/app/navigation/sidenav/sidenav.component.html
+++ b/src/app/navigation/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<md-toolbar>
+<md-toolbar [class.toolbar--small]="!isHovering">
   <img *ngIf="isHovering" src="/assets/images/logo-white.svg" class="logo">
   <img *ngIf="!isHovering" src="/assets/images/logo-white-small.svg" class="logo-small">
 </md-toolbar>
